# qustop

./: .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
docs/: api.rst  conf.py  getting_started.md  getting_started.rst  index.rst  intro_tutorial.rst  quantum_state_cloning.rst  quantum_state_distinguishability.rst  quantum_state_exclusion.rst  states_and_ensembles.rst  tutorials.global.rst  tutorials.open_problems.rst  tutorials.positive.rst  tutorials.ppt.rst  tutorials.rst  tutorials.separable.rst  tutorials.state_cloning.rst  tutorials.state_distinguishability.rst  tutorials.state_exclusion.rst
docs/_autosummary/: qustop.Ensemble.rst  qustop.OptClone.rst  qustop.OptDist.rst  qustop.OptExclude.rst  qustop.PPT.rst  qustop.Positive.rst  qustop.Separable.rst  qustop.State.rst
docs/figures/: logo_2.tex  make_images.sh  measurement_inclusions.tex
docs/paper/: main.aux  main.bib  main.out  main.tex  refs.bib  state_dist.tex
docs/paper/code/: bb84_game.py  bb84_game_quantum.py  (+13 more)
qustop/: __init__.py  _about.py  _version.py  ensemble.py
qustop/core/: __init__.py  ensemble.py  state.py
qustop/opt_clone/: __init__.py  opt_clone.py
qustop/opt_dist/: __init__.py  global.py  opt_dist.py  positive.py  ppt.py  separable.py
qustop/opt_exclude/: __init__.py  opt_exclude.py
research/: __init__.py  antidistinguishable.py  entanglement_cost_four_state_two_qubit.py  entanglement_cost_three_state_two_qubit.py  entanglement_cost_two_qubit.py  two_copy_problem.py
tests/: __init__.py
(+38 files in other folders)
