[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # black-default
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "qustop"
version = "0.0.2"
description = "Python tools for the optimizing over quantum states."
authors = [
    "Vincent Russo <vincentrusso1@gmail.com>"
]
maintainers = [
    "Vincent Russo <vincentrusso1@gmail.com>"
]
readme = "README.md"
homepage = "https://vprusso.github.io/"
repository = "https://github.com/vprusso/qustop"
keywords = ["quantum information", "quantum computing", "quantum state optimization", "quantum state distinguishability"]


[tool.poetry.dependencies]
python = "^3.8"
cvx = "*"
cvxpy = "*"
numpy = "*"
scipy = "*"
toqito = "*"
scs = "^2.1.2"
isort = "^5.9.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.7"
flake8-docstrings = "^1.5"
ipython = "*"
pep8 = "^1.7"
pylint = "^2.4"
pytest = "*"
pytest-cov = "*"
mypy = "^0.750.0"
coverage = "^4.5"
coveralls = "^1.9"
recommonmark = "*"
sphinx = "3.1.2"
sphinx_rtd_theme = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
